hard-gists/403306854d457c284d02/run.log
=== Docker Run Log for 403306854d457c284d02 ===
Started at: Mi 29. Okt 14:17:54 CET 2025

[2025-10-29 14:17:55] START: Running container for 403306854d457c284d02
[2025-10-29 14:17:55] SUCCESS: Container ba22d7ebe6ad88816648e9d753a62935db11f4e54f507102e95d392a4508d8e8 started for 403306854d457c284d02
=== Container logs for 403306854d457c284d02 ===
  File "/snippet.py", line 30
    print 'Not all elements could be created.'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 403306854d457c284d02 ===
[2025-10-29 14:17:57] INFO: Container ba22d7ebe6ad88816648e9d753a62935db11f4e54f507102e95d392a4508d8e8 has stopped
